package Cliente

type Cliente struct {
	id         int
	Correo     string
	nombre     string
	Pass       string
	tipoCuenta string
}
