package documento

type Documento struct {
	id                int
	texto             string
	tipoPregunta      string
	opciones          string
	respuestaCorrecta string
	puntaje           float32
}
