package curso

type Curso struct {
	id             int
	nombre         string
	nivelEducativo string
}
