package grupo

type Grupo struct {
	id          int
	nombre      string
	estudiantes []string
}
