package resultado

import "time"

type Resultado struct {
	id               int
	calificacion     float32
	fechaRealizacion time.Time
}
